--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,12 +1,23 @@
-<div class="center hero-unit">
-  <h1>Здесь              должно быть что-то</h1>
+<div class="container">
+	<div class="row">
+		<div class="span12">
+			<h1>Как это работает</h1> 
+			<p>Небольшое объяснение что к чему</p>
+		</div>
+	</div>
 
-  <h2>
-    <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-    sample application.
-  </h2>
+	<div class="row">
+		<div class="span6">
+			<h1>Пассажирам</h1> 
+			<p>blablabla</p>
+			<h1><button type="button" class="btn btn-warning">Найти попутку</button><h1>
+		</div>
+		<div class="span6">
+			<h1>Водителям</h1> 
+			<p>blablabla</p>
+			<h1><button type="button" class="btn btn-warning">Найти пассажира</button><h1>
+		</div>
+	</div>
 
-  <%= link_to "Sign up now!", '#', class: "btn btn-large btn-primary" %>
 </div>
 
-<%= link_to image_tag("rails.png", alt: "Rails"), 'http://rubyonrails.org/' %>
