--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-  padding-top: 60px;
+  
 }
 
 section {
@@ -70,6 +70,7 @@ p {
   text-decoration: none;
 }
 
+
 /* footer */
 
 footer {
@@ -117,6 +118,19 @@ footer ul li {
   @include box_sizing;
 }
 
+#header_line{
+	background-color: #ff8700;
+	padding: 30px;
+	margin: 0px;
+}
+
+#header_line2{
+	background-color: #ffbd73;
+	margin-top: 0px;
+	margin-bottom: 30px;
+
+}
+
 /* sidebar */
 
 aside {
@@ -156,6 +170,7 @@ input, textarea, select, .uneditable-input {
   margin-bottom: 15px;
   @include box_sizing;
 }
+
 
 input {
   height: auto !important;
