--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,26 +10,54 @@
     <![endif]-->
 </head>
   <body>
-    <header class="navbar navbar-fixed-top navbar-inverse">
-      <div class="navbar-inner">
-        <div class="container">
-          <%= link_to "Авто398", root_path, id: "logo" %>
-          <nav>
-            <ul class="nav pull-right">
-              <li><%= link_to "Главная",    root_path %></li>
-              <li><%= link_to "Найти пассажиров",    find_passengers_path %></li>
-              <li><%= link_to "Найти попутку",    find_car_path %></li>
-              <li><%= link_to "ЧаВо", faq_path %></li>
-              <li><%= link_to "Регистрация", signup_path %></li>
-            </ul>
-          </nav>
-        </div>
-      </div>
-    </header>
+
+	<header>
+
+		<div id="header_line">
+		    <div class="container">
+				
+				<div class="row">
+					<div class="span6">
+					    <%= link_to "ДоброеАвто", root_path, id: "logo" %>
+					</div>
+					<div class="span4">
+						1
+					</div>
+					<div class="span2 col-offset-4">
+					    <%= link_to "войти", root_path, id: "logo" %>
+					</div>
+				</div>
+
+			</div> 
+		</div> 
+
+		<div id="header_line2">
+
+		    <div class="container">
+			
+				<div class="navbar">
+
+					<ul class="nav navbar-nav">
+						<li class="active"><%= link_to "Главная",    root_path %></li>
+						<li><%= link_to "Найти пассажиров",    find_passengers_path %></li>
+						<li><%= link_to "Найти попутку",    find_car_path %></li>
+						<li><%= link_to "ЧаВо", faq_path %></li>
+						<li><%= link_to "Регистрация", signup_path %></li>
+					</ul>
+				</div>	
+
+			</div>
+		</div>
+
+	</header>
+
+
     <div class="container">
       <%= yield %>
+<!--	
 	  <%= render 'layouts/footer' %>
 	  <%= debug(params) if Rails.env.development? %>
-    </div>
+    -->
+	</div>
   </body>
 </html>
